<resources>
    <string name="app_name">TestApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="step1">Секундомер, таймер</string>
    <string name="step2">другое...</string>
    <string name="step3">другое...</string>
    <string name="tabSecTitle">Секундомер</string>
    <string name="tabTimerTitle">Таймер</string>
    <string name="actionSettings">Settings</string>
    <string name="chooseAct">Выберите экран:</string>
    <string name="secondsStart">Cтарт</string>
    <string name="secondsStop">Стоп</string>
    <string name="secondsGet">Отсечь</string>
    <string name="timerTakeTime">Сохр.</string>
    <string name="showSavedTimers">Сохраненные таймеры</string>
    <string name="noDataStr">Нет данных!</string>
    <string name="sStopwatchPrefTitle">Сохранять отсечки секундомера</string>
    <string name="sStopwatchPrefSummary">Сохранение отсечек в базу данных</string>
    <string name="sTimerPrefTitle">Сохранять отсечки таймера</string>
    <string name="sTimerPrefSummary">Сохранение отсечек в базу данных</string>
    <string name="setBoobsPrefTitle">Включить фоны OBOOBS</string>
    <string name="setBoobsPrefSummary">Включение картинки - фона</string>
    <string name="oboobsBtnTitle">Фоны oboobs</string>
    <string name="oboobsBtnSetBack">Установить фон</string>
    <string name="oboobsBackDone">Фон установлен</string>
    <string name="errorStr">Ошибка! Что-то пошло не так!</string>
    <string name="noConnectStr">Нет интернет-соединения!</string>
    <string name="secondsSettings">Настройки</string>
    <string name="gotoAct">Перейти</string>
    <string name="title_activity_stopwatch">Stopwatch</string>
    <string name="hoursStr">Часов:&#160;</string>
    <string name="minutsStr">Минут:&#160;</string>
    <string name="notifTitle">Секундомер запущен.</string>
    <string name="notifTitleTimer">Таймер запущен.</string>
    <string name="titleHourNotif">Час:&#160;</string>
    <string name="titleMinNotif">&#160;Мин:&#160;</string>
    <string name="titleSecNotif">&#160;Сек:&#160;</string>
    <string name="titleDisplayDone">Уведомление от таймера!</string>
    <string name="notifTitleTimerDone">Готово!</string>
    <string name="timerDone">Таймер завершил отсчет!</string>
    <string name="setColor">Сменить цвет фона</string>
    <string name="titleColor">Выберите цвет:</string>
    <string name="titleColorOK">Выбрать</string>
    <string name="titleColorCancel">Отмена</string>
    <string name="setTimer">Выберите часы, минуты, секунды:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
