<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fl_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_margin="2dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="true">
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.testapplication.fragments.FragmentSeconds">



    <TextView
        android:id="@+id/textviewMinutsFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:layout_gravity="center"
        android:scrollHorizontally="true"
        android:singleLine="false"
        android:textColor="#111111"
        android:text="@string/minutsStr"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textviewSecondsFR"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:singleLine="false"
        android:lines="1"
        android:textColor="#111111"
        android:scrollHorizontally="true"
        android:text="0"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context="com.example.testapplication.fragments.FragmentSeconds">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/secondsStart"
        android:textSize="25sp"
        android:id="@+id/btnStart"
        android:gravity="bottom"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/btn_back">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/secondsStop"
        android:textSize="25sp"
        android:id="@+id/btnStop"
        android:gravity="bottom"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/btn_back">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/secondsGet"
        android:textSize="25sp"
        android:id="@+id/btnGet"
        android:gravity="bottom"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/btn_back">
    </Button>

    </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/ll_rv_seconds"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>
</android.support.v7.widget.CardView>