<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:layout_margin="2dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".fragments.StopwatchFragment">
            <TextView
                android:id="@+id/textviewMTimerFR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:padding="0dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:scrollHorizontally="true"
                android:singleLine="false"
                android:textColor="#111111"
                android:text="@string/setTimer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <com.example.testapplication.helpers.MyNumberPicker
                    android:id="@+id/numberPickerHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    min_value = "0"
                    max_value = "23"/>
                <com.example.testapplication.helpers.MyNumberPicker
                    android:id="@+id/numberPickerMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp"
                    min_value = "0"
                    max_value = "59"/>
                <com.example.testapplication.helpers.MyNumberPicker
                    android:id="@+id/numberPickerSec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    min_value = "0"
                    max_value = "59"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textviewHoursFRT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:padding="0dp"
                android:paddingTop="0dp"
                android:layout_gravity="center"
                android:scrollHorizontally="true"
                android:singleLine="false"
                android:textColor="#111111"
                android:text="@string/hoursStr"
                android:textSize="40sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textviewMinutsFRT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:padding="0dp"
                android:paddingTop="0dp"
                android:layout_gravity="center"
                android:scrollHorizontally="true"
                android:singleLine="false"
                android:textColor="#111111"
                android:text="@string/minutsStr"
                android:textSize="40sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textviewSecondsFRT"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                android:singleLine="false"
                android:lines="1"
                android:textColor="#111111"
                android:scrollHorizontally="true"
                android:text="0"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    tools:context=".fragments.StopwatchFragment">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/secondsStart"
                        android:textSize="25sp"
                        android:id="@+id/btnStartTimer"
                        android:gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:background="@drawable/btn_back">
                    </Button>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/secondsStop"
                        android:textSize="25sp"
                        android:id="@+id/btnStopTimer"
                        android:gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:background="@drawable/btn_back">
                    </Button>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/timerTakeTime"
                        android:textSize="25sp"
                        android:id="@+id/btnTakeTimer"
                        android:gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:background="@drawable/btn_back">
                    </Button>
                </LinearLayout>
            </HorizontalScrollView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/timerTakeTime"
                android:textSize="25sp"
                android:id="@+id/btnShowTimers"
                android:gravity="bottom"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:background="@drawable/btn_back">
            </Button>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>